1. JIRA SS-1379 fix : Hierarchy management page is not proper with icons out of place in mobile screen. 2. Events clean up in dashbaord and edit profile page.

--- a/Source/SSWeb/src/main/webapp/resources/css/style-common.css
+++ b/Source/SSWeb/src/main/webapp/resources/css/style-common.css
@@ -5326,6 +5326,10 @@ tr.v-tbl-header {
 	border-top: 1px solid #dcdcdc;
 }
 
+td.v-tbl-btns {
+	position: relative;
+}
+
 .v-hr-tbl tr.v-tbl-header td {
 	font-weight: bold !important;
 }
@@ -8008,4 +8012,7 @@ label.url-change-input-label {
 }
 .social-auth-disabled {
 	cursor: auto !important; 
+}
+.v-hr-tbl-icn-wraper .v-tbl-icn {
+	font-size: 0;
 }
